# urbdata-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: frontend-ci.yml  tests.yml
app/: __init__.py  globals.css  main.py  page.tsx  providers.tsx
app/api/: __init__.py
app/components/: DataWorkspace.tsx  ExportDialog.tsx  MapCanvas.tsx  MapDocumentControls.tsx  OverviewWorkspace.tsx  ResultsWorkspace.tsx  UrbdataPrototype.tsx
app/config/: __init__.py  indicator_defaults.py  land_use_mapping.py  macroarea_mapping.py  road_hierarchy_mapping.py  settings.py
app/domain/: __init__.py  attribute_suggestions.py  csv_import.py  layer_join.py  text_encoding.py
app/infrastructure/: __init__.py
app/lib/: mockData.ts  styleCompiler.ts  types.ts
app/store/: useWorkspaceStore.ts
contracts/: openapi.json
docs/: current-analysis-architecture.md  database-baseline.md  development-start.md
docs/adr/: 001-metric-crs-strategy.md  002-indicator-registry.md  003-formula-versioning.md  004-analysis-run-lifecycle.md  006-default-parameters.md  (+10 more)
frontend/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
migrations/: README.md  env.py
tests/: DATA_EXPORT_PROJETO_01.csv  Geosjon_basico_teste.json  PROJETO_R01_GEOMETRIA.json  apiClient.test.ts  appError.test.ts  diagnosticAvailability.test.ts  exportsApi.test.ts  layerStyle.test.ts  mapDocumentComposition.test.ts  resultsPresentation.test.ts
(+244 files in other folders)
