[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urbdata-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "geopandas>=1.0,<2",
  "geoalchemy2>=0.15,<1",
  "networkx>=3.4,<4",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "psycopg[binary]>=3.2,<4",
  "pyogrio>=0.9,<1",
  "pyproj>=3.7,<4",
  "python-multipart>=0.0.9,<1",
  "shapely>=2.0,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
  "types-networkx>=3.4,<4",
]
reports = ["matplotlib>=3.9,<4", "weasyprint>=63,<70"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = ["integration: requires an isolated PostgreSQL/PostGIS database"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Depends(...) in a parameter default is the framework's own pattern,
# not the mutable-default footgun B008 is meant to catch.
"app/api/**" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["geopandas.*", "shapely.*"]
ignore_missing_imports = true
